--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Alexandre Macedo <ale@alemacedo.com>, based on work by Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@popperjs/core": "^2.4.4",
-    "bootstrap": "^5.0.0-alpha1",
+    "bootstrap": "5.1.0",
     "emailjs-com": "^2.6.3",
     "gatsby": "^2.24.61",
     "gatsby-image": "^2.4.19",
